@@ -57,7 +57,7 @@ Many C Driver functions report errors by returning ``false`` or -1 and filling o
 +-----------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ``MONGOC_ERROR_SASL``                   | A SASL error code.                                                                                                               | ``man sasl_errors`` for a list of codes.                                                                                                                                                                                                                                                                                 |
 +-----------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ``MONGOC_ERROR_BSON``                   | ``MONGOC_ERROR_BSON_INVALID``                                                                                                    | You passed an invalid or oversized BSON document as a parameter, or called :symbol:`mongoc_collection_create_index` with invalid keys, or the server reply was corrupt.                                                                                                                                                  |
+| ``MONGOC_ERROR_BSON``                   | ``MONGOC_ERROR_BSON_INVALID``                                                                                                    | You passed an invalid or oversized BSON document as a parameter or the server reply was corrupt.                                                                                                                                                                                                                         |
 +-----------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ``MONGOC_ERROR_NAMESPACE``              | ``MONGOC_ERROR_NAMESPACE_INVALID``                                                                                               | You tried to create a collection with an invalid name.                                                                                                                                                                                                                                                                   |
 +-----------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
