@@ -1153,25 +1153,6 @@ mongoc_collection_keys_to_index_string (const bson_t *keys)
 }
 
 
-bool
-mongoc_collection_create_index (mongoc_collection_t *collection,
-                                const bson_t *keys,
-                                const mongoc_index_opt_t *opt,
-                                bson_error_t *error)
-{
-   bson_t reply;
-   bool ret;
-
-   BEGIN_IGNORE_DEPRECATIONS
-
-   ret = mongoc_collection_create_index_with_opts (collection, keys, opt, NULL, &reply, error);
-
-   END_IGNORE_DEPRECATIONS
-
-   bson_destroy (&reply);
-   return ret;
-}
-
 static bool
 _mongoc_collection_index_keys_equal (const bson_t *expected, const bson_t *actual)
 {
@@ -1306,209 +1287,6 @@ done:
    bson_destroy (&command);
 
    return r;
-}
-
-bool
-mongoc_collection_create_index_with_opts (mongoc_collection_t *collection,
-                                          const bson_t *keys,
-                                          const mongoc_index_opt_t *opt,
-                                          const bson_t *opts,
-                                          bson_t *reply,
-                                          bson_error_t *error)
-{
-   mongoc_create_index_opts_t parsed;
-   mongoc_cmd_parts_t parts;
-   const mongoc_index_opt_t *def_opt;
-   const mongoc_index_opt_geo_t *def_geo;
-   const char *name;
-   bson_t cmd = BSON_INITIALIZER;
-   bson_array_builder_t *ar;
-   bson_t doc;
-   bson_t storage_doc;
-   bson_t wt_doc;
-   const mongoc_index_opt_geo_t *geo_opt;
-   const mongoc_index_opt_storage_t *storage_opt;
-   const mongoc_index_opt_wt_t *wt_opt;
-   char *alloc_name = NULL;
-   bool ret = false;
-   bool reply_initialized = false;
-   mongoc_server_stream_t *server_stream = NULL;
-   mongoc_cluster_t *cluster;
-
-   ENTRY;
-
-   BSON_ASSERT_PARAM (collection);
-   BSON_ASSERT_PARAM (keys);
-
-   def_opt = mongoc_index_opt_get_default ();
-   opt = opt ? opt : def_opt;
-
-   mongoc_cmd_parts_init (&parts, collection->client, collection->db, MONGOC_QUERY_NONE, &cmd);
-   parts.is_write_command = true;
-
-   if (!_mongoc_create_index_opts_parse (collection->client, opts, &parsed, error)) {
-      GOTO (done);
-   }
-
-   if (!parsed.writeConcern) {
-      parsed.writeConcern = collection->write_concern;
-      parsed.write_concern_owned = false;
-   }
-
-   /*
-    * Generate the key name if it was not provided.
-    */
-   name = (opt->name != def_opt->name) ? opt->name : NULL;
-   if (!name) {
-      alloc_name = mongoc_collection_keys_to_index_string (keys);
-      if (alloc_name) {
-         name = alloc_name;
-      } else {
-         _mongoc_set_error (error,
-                            MONGOC_ERROR_BSON,
-                            MONGOC_ERROR_BSON_INVALID,
-                            "Cannot generate index name from invalid `keys` argument");
-         GOTO (done);
-      }
-   }
-
-   /*
-    * Build our createIndexes command to send to the server.
-    */
-   BSON_ASSERT (BSON_APPEND_UTF8 (&cmd, "createIndexes", collection->collection));
-   bson_append_array_builder_begin (&cmd, "indexes", 7, &ar);
-   bson_array_builder_append_document_begin (ar, &doc);
-   BSON_ASSERT (BSON_APPEND_DOCUMENT (&doc, "key", keys));
-   BSON_ASSERT (BSON_APPEND_UTF8 (&doc, "name", name));
-   if (opt->background) {
-      BSON_ASSERT (BSON_APPEND_BOOL (&doc, "background", true));
-   }
-   if (opt->unique) {
-      BSON_ASSERT (BSON_APPEND_BOOL (&doc, "unique", true));
-   }
-   if (opt->drop_dups) {
-      BSON_ASSERT (BSON_APPEND_BOOL (&doc, "dropDups", true));
-   }
-   if (opt->sparse) {
-      BSON_ASSERT (BSON_APPEND_BOOL (&doc, "sparse", true));
-   }
-   if (opt->expire_after_seconds != def_opt->expire_after_seconds) {
-      BSON_ASSERT (BSON_APPEND_INT32 (&doc, "expireAfterSeconds", opt->expire_after_seconds));
-   }
-   if (opt->v != def_opt->v) {
-      BSON_ASSERT (BSON_APPEND_INT32 (&doc, "v", opt->v));
-   }
-   if (opt->weights && (opt->weights != def_opt->weights)) {
-      BSON_ASSERT (BSON_APPEND_DOCUMENT (&doc, "weights", opt->weights));
-   }
-   if (opt->default_language != def_opt->default_language) {
-      BSON_ASSERT (BSON_APPEND_UTF8 (&doc, "default_language", opt->default_language));
-   }
-   if (opt->language_override != def_opt->language_override) {
-      BSON_ASSERT (BSON_APPEND_UTF8 (&doc, "language_override", opt->language_override));
-   }
-   if (opt->partial_filter_expression) {
-      BSON_ASSERT (BSON_APPEND_DOCUMENT (&doc, "partialFilterExpression", opt->partial_filter_expression));
-   }
-   if (opt->collation) {
-      BSON_ASSERT (BSON_APPEND_DOCUMENT (&doc, "collation", opt->collation));
-   }
-   if (opt->geo_options) {
-      geo_opt = opt->geo_options;
-      def_geo = mongoc_index_opt_geo_get_default ();
-      if (geo_opt->twod_sphere_version != def_geo->twod_sphere_version) {
-         BSON_ASSERT (BSON_APPEND_INT32 (&doc, "2dsphereIndexVersion", geo_opt->twod_sphere_version));
-      }
-      if (geo_opt->twod_bits_precision != def_geo->twod_bits_precision) {
-         BSON_ASSERT (BSON_APPEND_INT32 (&doc, "bits", geo_opt->twod_bits_precision));
-      }
-      if (geo_opt->twod_location_min != def_geo->twod_location_min) {
-         BSON_ASSERT (BSON_APPEND_DOUBLE (&doc, "min", geo_opt->twod_location_min));
-      }
-      if (geo_opt->twod_location_max != def_geo->twod_location_max) {
-         BSON_ASSERT (BSON_APPEND_DOUBLE (&doc, "max", geo_opt->twod_location_max));
-      }
-      if (geo_opt->haystack_bucket_size != def_geo->haystack_bucket_size) {
-         BSON_ASSERT (BSON_APPEND_DOUBLE (&doc, "bucketSize", geo_opt->haystack_bucket_size));
-      }
-   }
-
-   if (opt->storage_options) {
-      storage_opt = opt->storage_options;
-      switch (storage_opt->type) {
-      case MONGOC_INDEX_STORAGE_OPT_WIREDTIGER:
-         wt_opt = (mongoc_index_opt_wt_t *) storage_opt;
-         BSON_APPEND_DOCUMENT_BEGIN (&doc, "storageEngine", &storage_doc);
-         BSON_APPEND_DOCUMENT_BEGIN (&storage_doc, "wiredTiger", &wt_doc);
-         BSON_ASSERT (BSON_APPEND_UTF8 (&wt_doc, "configString", wt_opt->config_str));
-         bson_append_document_end (&storage_doc, &wt_doc);
-         bson_append_document_end (&doc, &storage_doc);
-         break;
-      default:
-         break;
-      }
-   }
-
-   bson_array_builder_append_document_end (ar, &doc);
-   bson_append_array_builder_end (&cmd, ar);
-
-   const mongoc_ss_log_context_t ss_log_context = {.operation = "createIndexes"};
-   server_stream = mongoc_cluster_stream_for_writes (
-      &collection->client->cluster, &ss_log_context, parsed.client_session, NULL, reply, error);
-
-   if (!server_stream) {
-      reply_initialized = true;
-      GOTO (done);
-   }
-
-   if (!mongoc_cmd_parts_set_write_concern (&parts, parsed.writeConcern, error)) {
-      GOTO (done);
-   }
-
-   parts.assembled.session = parsed.client_session;
-   if (!bson_concat (&parts.extra, &parsed.extra)) {
-      _mongoc_set_error (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "'opts' is too large");
-      GOTO (done);
-   }
-
-   cluster = &collection->client->cluster;
-   if (mongoc_cmd_parts_assemble (&parts, server_stream, error)) {
-      ret = mongoc_cluster_run_command_monitored (cluster, &parts.assembled, reply, error);
-   } else {
-      _mongoc_bson_init_if_set (reply);
-   }
-
-   reply_initialized = true;
-
-   if (ret) {
-      if (reply) {
-         ret = !_mongoc_parse_wc_err (reply, error);
-      }
-   }
-
-done:
-   bson_destroy (&cmd);
-   bson_free (alloc_name);
-   _mongoc_create_index_opts_cleanup (&parsed);
-   mongoc_server_stream_cleanup (server_stream);
-   mongoc_cmd_parts_cleanup (&parts);
-   if (!reply_initialized && reply) {
-      bson_init (reply);
-   }
-
-   RETURN (ret);
-}
-
-
-bool
-mongoc_collection_ensure_index (mongoc_collection_t *collection,
-                                const bson_t *keys,
-                                const mongoc_index_opt_t *opt,
-                                bson_error_t *error)
-{
-   BEGIN_IGNORE_DEPRECATIONS
-   return mongoc_collection_create_index (collection, keys, opt, error);
-   END_IGNORE_DEPRECATIONS
 }
 
 
